update css link

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>safin</title>
-    <link rel="stylesheet" href="web.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
